[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "galaxy-jukebox"
authors = [{name = "1234ab", email = "nevenincs007@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["minecraft", "note", "block", "noteblock", "schematic", "redstone"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
dependencies = [
    "pynbs >=1.1.0",
    "mcschematic >=11.4",
]

[project.urls]
Home = "https://github.com/4321ba/Galaxy_Jukebox"

[project.scripts]
galaxy-jukebox = "galaxy_jukebox.__main__:cli_main"
