[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "galaxy-jukebox-gui"
authors = [{name = "1234ab", email = "nevenincs007@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["minecraft", "note", "block", "noteblock", "schematic", "redstone"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
dependencies = [
    "PyQt5 >=5.15.0",
    "galaxy-jukebox >=1.0.0",
]

[project.urls]
Home = "https://github.com/4321ba/Galaxy_Jukebox"

[project.gui-scripts]
galaxy-jukebox-gui = "galaxy_jukebox_gui.gui:main"
